[gd_scene load_steps=8 format=3 uid="uid://cn42uc3ccpsx5"]

[ext_resource type="PackedScene" uid="uid://bs1bw7ux2tlqb" path="res://components/input_icon.tscn" id="1_2433q"]
[ext_resource type="Script" uid="uid://dr50dcreeedxy" path="res://scripts/atre_view.gd" id="1_jvvgj"]
[ext_resource type="Texture2D" uid="uid://c6dk4qnnmsbyv" path="res://textures/mystic_noise.tres" id="2_fd18l"]

[sub_resource type="Shader" id="Shader_jvvgj"]
code = "// NOTE: Shader automatically converted from Godot Engine 4.5.1.stable's StandardMaterial3D.

shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_front, diffuse_burley, specular_schlick_ggx, unshaded;

uniform vec4 albedo : source_color;
uniform sampler2D texture_albedo : source_color, filter_linear_mipmap, repeat_enable;
uniform float alpha_scissor_threshold : hint_range(0.0, 1.0, 0.001);

uniform vec3 uv1_scale;
uniform vec3 uv1_offset;

void vertex() {
	UV = UV * uv1_scale.xy + uv1_offset.xy;
}

void fragment() {
	vec2 base_uv = UV;

	vec4 albedo_tex = texture(texture_albedo, base_uv + vec2(1.0, TIME));
	ALBEDO = albedo.rgb * albedo_tex.rgb;

	METALLIC = 0.5;
	SPECULAR = 1.0;

	ROUGHNESS = 0.0;
	ALPHA *= albedo_tex.r;
	ALPHA_SCISSOR_THRESHOLD = alpha_scissor_threshold;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fd18l"]
render_priority = 0
shader = SubResource("Shader_jvvgj")
shader_parameter/albedo = Color(0.89681125, 0.1515783, 0.114013396, 1)
shader_parameter/texture_albedo = ExtResource("2_fd18l")
shader_parameter/alpha_scissor_threshold = 0.5
shader_parameter/uv1_scale = Vector3(1, 1, 1)
shader_parameter/uv1_offset = Vector3(0, 0, 0)

[sub_resource type="SphereMesh" id="SphereMesh_jvvgj"]
material = SubResource("ShaderMaterial_fd18l")
radius = 1.2
height = 2.4
radial_segments = 32
rings = 10

[sub_resource type="SphereShape3D" id="SphereShape3D_jvvgj"]

[node name="AtreView" type="Node3D" groups=["mystic"]]
script = ExtResource("1_jvvgj")
extent_distance = 0.5

[node name="StrikeMarker" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(6.0129495, 0, 0, 0, 6.0129495, 0, 0, 0, 6.0129495, 0, 0, 2.9702485)
visible = false

[node name="MysticStrike" type="MeshInstance3D" parent="StrikeMarker"]
transform = Transform3D(0.16630773, 0, 0, 0, 0.16630773, 0, 0, 0, 0.16630773, 0, 0, -0.49397528)
cast_shadow = 0
mesh = SubResource("SphereMesh_jvvgj")
skeleton = NodePath("../..")

[node name="Icons" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="InputIcon_0" parent="Icons" instance=ExtResource("1_2433q")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.50000006, -1e-45, 0)
associated_key = 69
associated_button = 0

[node name="InputIcon_1" parent="Icons" instance=ExtResource("1_2433q")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.50000006, 0.50000006, 0)
associated_key = 51

[node name="InputIcon_2" parent="Icons" instance=ExtResource("1_2433q")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.99999994, 0.49999997, 0)
associated_key = 81
associated_button = 2

[node name="InputIcon_3" parent="Icons" instance=ExtResource("1_2433q")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1e-45, 0.50000006, 0)
associated_key = 49
associated_button = 3

[node name="Hitbox" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("SphereShape3D_jvvgj")
